tests/data/php/shouldfail/ValidClassName.php
<?php
/**
 * @package testdata.shouldfail
 */
class PassValidClassName {
}
class Pass_ValidClassName {
}
class fail_ValidClassName {
}